// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor store reducer when PostEditor/ADD_IMAGE_PREVIEW adds an image preview 1`] = `
Object {
  "imagePreviews": Array [
    "bar.jog",
  ],
  "linkPreviewId": null,
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store reducer when PostEditor/CLEAR_LINK_PREVIEW linkPreviewId is cleared and status set to "cleared" 1`] = `
Object {
  "imagePreviews": Array [],
  "linkPreviewId": null,
  "linkPreviewStatus": "cleared",
}
`;

exports[`PostEditor store reducer when PostEditor/FETCH_LINK_PREVIEW linkPreviewId is not set status is "invalid" if a record is not found 1`] = `
Object {
  "imagePreviews": Array [],
  "linkPreviewId": null,
  "linkPreviewStatus": "invalid",
}
`;

exports[`PostEditor store reducer when PostEditor/FETCH_LINK_PREVIEW linkPreviewId is set if record is found 1`] = `
Object {
  "imagePreviews": Array [],
  "linkPreviewId": "found",
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store reducer when PostEditor/REMOVE_IMAGE_PREVIEW removes an image preview 1`] = `
Object {
  "imagePreviews": Array [
    "a.png",
    "c.png",
  ],
  "linkPreviewId": null,
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store reducer when PostEditor/REMOVE_LINK_PREVIEW linkPreviewId is cleared and status set to "removed" 1`] = `
Object {
  "imagePreviews": Array [],
  "linkPreviewId": null,
  "linkPreviewStatus": "removed",
}
`;

exports[`PostEditor store reducer when PostEditor/SET_IMAGE_PREVIEWS sets image previews 1`] = `
Object {
  "imagePreviews": Array [
    "foo.png",
    "bar.jog",
  ],
  "linkPreviewId": null,
  "linkPreviewStatus": null,
}
`;

exports[`PostEditor store reducer when PostEditor/SWITCH_IMAGE_PREVIEWS switches two image previews 1`] = `
Object {
  "imagePreviews": Array [
    "a.png",
    "c.png",
    "b.png",
  ],
  "linkPreviewId": null,
  "linkPreviewStatus": null,
}
`;
